--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,10 @@
 spring.datasource:
-  url: jdbc:mysql://127.0.0.1:3306/camunda_bpm?useUnicode=true&characterEncoding=utf-8&useTimezone=true&serverTimezone=UTC
+  #url: jdbc:mysql://host.docker.internal:3306/camunda?useUnicode=true&characterEncoding=utf-8&useTimezone=true&serverTimezone=UTC
+  url: jdbc:mysql://appsDb:123@127.0.0.1:3306/camunda
+  #url: jdbc:mysql://127.0.0.1:3306/camunda_bpm?useUnicode=true&characterEncoding=utf-8&useTimezone=true&serverTimezone=UTC
   #url: jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
 #shareable h2 database: jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-  username: root
-  password: 
+
 spring.h2.console.enabled: true
 camunda.bpm:
   admin-user:
